Fix syntax in SecurityConfig and enable Render CORS